<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:gravity="center">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidePercentBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidePercentTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"
            />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_asa_principal"
            android:contentDescription="@string/img_Desc"
            android:layout_margin="10dp"
            app:layout_constraintStart_toEndOf="@id/guideStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guidePercentTop"
            />

        <TextView
            android:id="@+id/tvTitleServices"
            style="@style/titlePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_contact"
            app:layout_constraintStart_toEndOf="@id/imgLogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guidePercentTop"
            app:layout_constraintEnd_toStartOf="@id/guideEnd"
            android:visibility="invisible"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/guidePercentTop"
            app:layout_constraintStart_toEndOf="@id/guideStart"
            app:layout_constraintEnd_toStartOf="@id/guideEnd">

            <TextView
                android:id="@+id/tvTitleContact"
                style="@style/titlePage"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contc_title"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/etNameContact"
                style="@style/editTextPage"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:autofillHints="name"
                android:hint="@string/contc_name"
                android:inputType="text"
                android:maxLength="85"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/etPhoneContact"
                style="@style/editTextPage"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:autofillHints="phone"
                android:hint="@string/contc_phone"
                android:inputType="phone"
                android:maxLength="10"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/etEmailContact"
                style="@style/editTextPage"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:autofillHints="emailAddress"
                android:hint="@string/contc_email"
                android:inputType="textEmailAddress"
                android:maxLength="85"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/etMessageContact"
                style="@style/editTextPage"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:autofillHints=""
                android:gravity="start|top"
                android:hint="@string/contc_message"
                android:inputType="textMultiLine"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/btnSendContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contc_btnSend"
                android:background="@drawable/shape_btn_border"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>