<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical"
        android:gravity="end">

        <Button
            android:id="@+id/btnPrivacy"
            style="@style/simpleTextFooter"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:backgroundTint="#000000"
            android:text="@string/about_privacidad"
            app:icon="@android:drawable/ic_menu_info_details" />

        <Button
            android:id="@+id/btnTerms"
            style="@style/simpleTextFooter"
            android:backgroundTint="#000000"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/about_terminos"
            app:icon="@android:drawable/ic_menu_help"/>

        <TextView
            android:id="@+id/txtVersion"
            style="@style/simpleTextFooter"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textAlignment="center"
            android:textSize="11sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>