<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.service.services.selection.ConsultoriaFragment"
    android:id="@+id/consultoria_fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:gravity="center">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidePercentBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidePercentTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"
            />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_asa_principal"
            android:contentDescription="@string/img_Desc"
            android:layout_margin="10dp"
            app:layout_constraintStart_toEndOf="@id/guideStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guidePercentTop"
            />

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminateDrawable="@drawable/loading_anim"
            android:indeterminateDuration="1500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/consultCertificate"
            style="@style/subTitleText"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/consult_certificate"
            app:layout_constraintStart_toEndOf="@id/guideStart"
            app:layout_constraintEnd_toStartOf="@id/guideEnd"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo"
            />

        <TextView
            android:id="@+id/consultCertificateBody"
            style="@style/simpleText"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/consult_certificate_body"
            app:layout_constraintStart_toEndOf="@id/guideStart"
            app:layout_constraintEnd_toStartOf="@id/guideEnd"
            app:layout_constraintTop_toBottomOf="@+id/consultCertificate"
            />

        <TextView
            android:id="@+id/consultVerify"
            style="@style/subTitleText"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/consult_verification"
            app:layout_constraintStart_toEndOf="@id/guideStart"
            app:layout_constraintEnd_toStartOf="@id/guideEnd"
            app:layout_constraintTop_toBottomOf="@+id/consultCertificateBody"
            />

        <TextView
            android:id="@+id/consultVerifyBody"
            style="@style/simpleText"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/consult_verification_body"
            app:layout_constraintStart_toEndOf="@id/guideStart"
            app:layout_constraintEnd_toStartOf="@id/guideEnd"
            app:layout_constraintTop_toBottomOf="@+id/consultVerify"
            />

        <TextView
            android:id="@+id/consultoriaText"
            style="@style/subTitleText"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/consult_sustainability"
            app:layout_constraintStart_toEndOf="@id/guideStart"
            app:layout_constraintEnd_toStartOf="@id/guideEnd"
            app:layout_constraintTop_toBottomOf="@+id/consultVerifyBody"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvServicesConsultoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@id/guideStart"
            app:layout_constraintEnd_toStartOf="@id/guideEnd"
            app:layout_constraintTop_toBottomOf="@+id/consultoriaText"
            />

        <Button
            android:id="@+id/btnShowMore"
            android:background="@drawable/shape_btn_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_show"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toEndOf="@id/guideStart"
            app:layout_constraintEnd_toStartOf="@id/guideEnd"
            app:layout_constraintTop_toBottomOf="@+id/rvServicesConsultoria"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>