<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAnimals"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true"
        app:elevation="50dp"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAboutUs"
                style="@style/subTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_titlePresent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/ivOFG"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:padding="3dp"
                android:contentDescription="@string/img_Desc"
                app:layout_constraintTop_toBottomOf="@+id/tvAboutUs"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/asaedificioa"
                />

            <TextView
                android:id="@+id/tvDescriptionAbout"
                style="@style/simpleText"
                android:textSize="12sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_present"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivOFG"
                app:layout_constraintTop_toBottomOf="@id/tvAboutUs"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>